--- a/index.html
+++ b/index.html
@@ -4,87 +4,94 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- to adapt to different screen devices-->
         <title> Balandra Dyanel Lancea Estillore - Resume </title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/png" href="ResumeIcon.png">
     </head>
         <body>
             <header>
-                <h1> H1 </h1>
-                <p> H1-P </p>
+                <h1> Dyanel Lancea E. Balandra </h1>
+                <p> Singapore • +65 9161 7997 • <a href="mailto:dyanellancea@gmail.com">dyanellancea@gmail.com</a> 
+                <br> <a href="https://www.linkedin.com/in/dyanel-lancea-balandra/">https://www.linkedin.com/in/dyanel-lancea-balandra/</a> 
+                </p>
             </header>
-
-            <section id="Contact">
-                <h2> H2 </h2>
-                <p> H2-P </p>
-            </section>
 
             <section id="Education">
                 <h2>Education </h2>
                 <h3>Diploma in Computer Engineering <span class="date"> 2022-2025</span></h3>
-                <h4>Temasek Polytechnic, School of Engineering
+                <h5>Temasek Polytechnic, School of Engineering
                     <br> Cumilitive GPA:3.7/4.0, Temasek Polytechnic Scholarship (2022-2024)
                     <br> Relevant Courses: Full-Stack Development, AI & Machine Learning, Internet of Things (IoT), Object Oriented Programming
-                </h4>
+                </h5>
             </section>
 
             <section id="Work Experience">
                 <h2>Work Experience </h2>
                 <h3>EP-Tec Solutions <span class="date"> Apr 2024-Aug 2024 </h3>
                 <h4>EP-Edu dept. Intern</h4>
-                <p>Research and curate educational programmes for educational institutes (Primary 4 to Secondary 2 students).
-                    <br> Educational programmes includes coding, loT, robotics, drones, and STEM.
-                    <br> Manage and teach classes for lessons.
-                   </p>
+                <p> <ul>
+                    <li>Research and curate educational programmes for educational institutes (Primary 4 to Secondary 2 students).</li>
+                    <li>Educational programmes includes coding, loT, robotics, drones, and STEM.</li>
+                    <li>Manage and teach classes for lessons.</li>
+                </ul> </p>
             </section>
 
             <Section id="Activities">
                 <h2>Activities </h2>
                 <h3>Engineering Studies Club (ESC) <span class="date"> 2022-2025 </h3>
                 <h4>Sub-Committee, Facilitator </h4>
-                <p>Coordinate and manage events under the School of Engineering in Temasek Polytechnic.
-                    <br>Facilitate event activities and make they are on schedule.
-                    <br>Monitor participants and their concerns.
-                </p>
-
-                <h2>Tchoukball Temasek Polytechnic <span class="date"> 2023-2025 </h2>
+                <ul>
+                    <li>Coordinate and manage events under the School of Engineering in Temasek Polytechnic.</li>
+                    <li>Facilitate event activities and make they are on schedule.</li>
+                    <li>Monitor participants and their concerns.</li>
+                </ul>
+                <br>
+                <h3>Tchoukball Temasek Polytechnic <span class="date"> 2023-2025 </h3>
                 <h4>Sub-Committee, Facilitator </h4>
-                <p>Participated in POL-ITE 2023 (Silver).
-                    <br>Participated in POL-ITE 2024.
-                </p>
+                <ul>
+                    <li>Participated in POL-ITE 2023 (Silver).</li>
+                    <li>Participated in POL-ITE 2024.</li>
+                </ul>
             </Section>
 
             <Section id="Technical Skills">
                 <h2> Technical Skills </h2>
                 <div class="skills-grid">
                     <div><strong>Software Development Tools</strong>
-                        <br>JupyterLab
-                        <br>OpenCV
-                        <br>Visual Studio Code
-                        <br>SQL Database Management Software
-                        <br>MakeCode Blocks Playground
-                        <br>Unity
+                        <ul>
+                            <li>JupyterLab</li>
+                            <li>OpenCV</li>
+                            <li>Visual Studio Code</li>
+                            <li>SQL Database Management Software</li>
+                            <li>MakeCode Blocks Playground</li>
+                            <li>Unity</li>
+                        </ul> 
                     </div>
                     
                     <div><strong>Microcontrollers & Others</strong>
-                        <br>Raspberry Pi
-                        <br>Arduino
-                        <br>Tello Drone
+                        <ul>
+                            <li>Raspberry Pi</li>
+                            <li>Arduino</li>
+                            <li>Tello Drone</li>
+                        </ul>
                     </div>
 
                     <div><strong>Languages</strong>
-                        <br>Python
-                        <br>C
-                        <br>TypeScript
-                        <br>JavaScript
-                        <br>SQL
-                        <br>HTML & CSS
+                        <ul>
+                            <li>Python</li>
+                            <li>C</li>
+                            <li>TypeScript</li>
+                            <li>JavaScript</li>
+                            <li>SQL</li>
+                            <li>HTML & CSS</li>
+                        </ul>
                     </div>
                 </div>
             </Section>
 
             <Section id="Additional Information">
                 <h2>Additional Information </h2>
-                <h5>Soft Skills: Class-management skills, Public Speaking, Microsoft Excel, Microsoft Powerpoint, Canva & Google slides
-                    <br>Languages: English, Tagalog.
+                <h5><strong>Soft Skills:</strong> Class-management skills, Public Speaking, Microsoft Excel, Microsoft Powerpoint, Canva & Google slides
+                    <br><strong>Languages:</strong> English, Tagalog.
                 </h5>
                 
             </Section>
